<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:id="@+id/imageVG"
            android:src="@drawable/thebatman"
            android:contentDescription="@string/imageVG"/>

        <TextView
            android:id="@+id/titleVG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleVG"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/imageVG"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/imageVG"
            android:layout_below="@id/titleVG">
            <TextView
                android:id="@+id/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionText"
                android:textSize="15sp"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>