<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false"
    android:padding="12.dp"
    android:layout_marginVertical="4.dp"
    android:layout_marginHorizontal="12.dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/identitas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/identitas"
                app:srcCompat="@drawable/thebatman" />

            <LinearLayout
                android:id="@+id/identitas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTriad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Judul Novel"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    app:layout_constraintTop_toTopOf="@id/gambar"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_toEndOf="@id/imageVG"
                    android:layout_below="@id/titleVG"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:id="@+id/descText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionText"
                        android:textStyle="bold"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_toEndOf="@id/imageVG"
                    android:layout_below="@id/titleVG">
                    <TextView
                        android:id="@+id/ownText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ownText"
                        android:textStyle="bold"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/owned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/owned"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>